--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>test 1</title>
 </head>
 <body>
+    <div class="block1">block1</div>
+    <div class="block2">block2</div>
+    <div class="block3">block3</div>
+    <div class="block4">block4</div>
     <h1>Hello World!!</h1>
     <h1>Hello World!!</h1>
     <h1>Hello World!!</h1>
